# qxrd

./: .cvsignore  .gitignore  .gitmodules  AcqLinuxTypes.h  CMakeLists.txt  Doxyfile  Doxyfile.in  README  README.txt  TODO.h  XISL.lib  app.nsi  app.spec.in  build-from-source.txt  compiler.pri  configure.ac  dmg.pri  extras-app.pri  extras-lib.pri  extras-recurse.pri  junk_app.cpp  junk_nsis.cpp  libs.nsi  main.cpp  nordata.lscript  nsis-app.pri  nsis-libs.pri  nsis.pri  perkin-elmer.mac  qcepdebug.cpp  qcepdebug.h  qcepimagedata-ptr.h  qcepimagedata.cpp  qcepimagedata.h  qcepimagedataformat.cpp  qcepimagedataformat.h  qcepimagedataformatcbf.cpp  qcepimagedataformatcbf.h  qcepimagedataformatmar345.cpp  qcepimagedataformatmar345.h  (+184 more)
nexus-4.3.1/contrib/: Makefile.am  README
nexus-4.3.1/contrib/applications/: Makefile.am  Makefile.in
nexus-4.3.1/contrib/applications/NXextract/: Makefile.in
nexus-4.3.1/contrib/applications/NXextract/src/: Makefile.in
nexus-4.3.1/contrib/bindings/python/: Makefile.in
nexus-4.3.1/doc/nxdict/: Makefile.am  Makefile.in
qceplib-nexus/nexus-4.3.1/applications/NXtranslate/docs/: Makefile.am  Makefile.in  NXtranslate.txt
qceplib-nexus/nexus-4.3.1/doc/: Makefile.am  Makefile.in
qceplib-nexus/nexus-4.3.1/doc/api/: Makefile.am
qceplib-nexus/nexus-4.3.1/doc/doxygen/html-c/: dir_04f2ecc425faf0d475a3caf484e551f3.html  examples.html  graph_legend.html  group__c__external.html  group__c__linking.html  group__c__main.html  group__c__memory.html  group__c__metadata.html  group__c__navigation.html  napi_test_8c-example.html
qceplib-nexus/nexus-4.3.1/doc/doxygen/html-cpp/: NeXusException_8cpp.html  NeXusException_8cpp__incl.map  NeXusException_8cpp_source.html  NeXusException_8hpp__dep__incl.map  NeXusException_8hpp__dep__incl.md5  NeXusException_8hpp__incl.md5  NeXusException_8hpp_source.html  NeXusFile_8cpp.html  NeXusFile_8cpp__incl.map  NeXusFile_8cpp_source.html  NeXusFile_8hpp__dep__incl.map  NeXusFile_8hpp__incl.map  NeXusFile_8hpp__incl.md5  NeXusStream_8cpp.html  NeXusStream_8cpp__incl.map  NeXusStream_8hpp__dep__incl.map  NeXusStream_8hpp__incl.map  NeXusStream_8hpp__incl.md5  classNeXus_1_1Exception-members.html  classNeXus_1_1File__coll__graph.md5  classNeXus_1_1File_a0e8f6d8e00150ce875ea43deda1cb89d_cgraph.md5  classNeXus_1_1File_a0fdc36a615623dfd539fdb12f8ff5b93_cgraph.map  classNeXus_1_1File_a1c890ec5973f02a9247a6138af2090d9_cgraph.map  classNeXus_1_1File_a218561cdbc3b8660cc31a38baa617dbf_cgraph.md5  classNeXus_1_1File_a23f57191d6b87b773d5b64fc442b5844_cgraph.map  classNeXus_1_1File_a2a3009d544ad4dcc2c334ec9b68d113e_cgraph.md5  classNeXus_1_1File_a2b0e9bac0b10f6447426761ea12dc311_cgraph.map  classNeXus_1_1File_a2ba79411a463ab6b53113310ec85c377_cgraph.map  classNeXus_1_1File_a398929033d9b25c6996bb0db90db829c_cgraph.map  classNeXus_1_1File_a398929033d9b25c6996bb0db90db829c_cgraph.md5  classNeXus_1_1File_a3afd4cfa4e7c72d2c30c7557cb23002a_cgraph.map  classNeXus_1_1File_a4b3d8b0fc4814f6c9cdf9194715b2148_cgraph.map  classNeXus_1_1File_a4b3d8b0fc4814f6c9cdf9194715b2148_cgraph.md5  classNeXus_1_1File_a566ea815d26129adbf9e0cfe2cf30142_cgraph.map  classNeXus_1_1File_a566ea815d26129adbf9e0cfe2cf30142_cgraph.md5  classNeXus_1_1File_a56bee425ecc3b845c5e838a85b76e642_cgraph.map  classNeXus_1_1File_a62652a37483fcde76a6f048bf99cae85_cgraph.map  classNeXus_1_1File_a62652a37483fcde76a6f048bf99cae85_cgraph.md5  classNeXus_1_1File_a6495b9dece53360c455772b357b782b3_cgraph.map  classNeXus_1_1File_a679a8863b080aa837db710687b817a6b_cgraph.map  (+103 more)
qceplib-nexus/nexus-4.3.1/doc/doxygen/html-f77/: dir_6e6b81098c6ce7e6fcecc5492e7d040b.html  dir_6e6b81098c6ce7e6fcecc5492e7d040b_dep.md5  globals.html  globals_func.html  graph_legend.html  index.html  napif_8f_a0c03d1c970f90eb804d0d67cf47d083b_cgraph.map  napif_8f_a139fb5c6919ad0740cf068fa899104bb_cgraph.map  napif_8f_a1659729b8206cb134ce3e0c179f3eea9_cgraph.map  napif_8f_a1659729b8206cb134ce3e0c179f3eea9_cgraph.md5  napif_8f_a3e81b38bf99c84e156bc52d04c473bce_cgraph.map  napif_8f_a4dee079d777ba616801e6b1ae4017a76_cgraph.md5  napif_8f_a5542b2c1ee5ec2ece470238ddbdd0c75_cgraph.md5  napif_8f_a5e16e9aeff6c1fa14479e872a17862f6_cgraph.map  napif_8f_a5e16e9aeff6c1fa14479e872a17862f6_cgraph.md5  napif_8f_a604d1998be639044782cc3b524e776a4_cgraph.md5  napif_8f_a7a2816a060118c0c3290a096ae8e8d0a_cgraph.map  napif_8f_a962f295840bc6fcae9f88a5ecb7add75_cgraph.map  napif_8f_a970ffa80737bd1b677df6ea743abaf81_cgraph.map  napif_8f_aa3636f805bca1033f6716e10a2fbb8e5_cgraph.md5  napif_8f_ab2a2af9aa5a9fd0c6b8dfd1fab515c1c_cgraph.md5  napif_8f_ab9b072d92b54f52628812553ba2576dd_cgraph.map  napif_8f_ac6e73c401f5e7011f2d538395a415b10_cgraph.map  napif_8f_ac6e73c401f5e7011f2d538395a415b10_cgraph.md5  napif_8f_acba0cc2b051fe5ef85478c1b68f17bc0_cgraph.map  napif_8f_ad27167f18f762d8ab1371483d91d8c87_cgraph.md5  napif_8f_ad77f78b03c67979fcae5a012f801f88f_cgraph.map  napif_8f_ade04bcae14d3b9a8c30ae716c7680ce0_cgraph.md5  napif_8f_ae6c1cb05b71868c261ff8c752140b5ba_cgraph.map  napif_8f_aee532ae79be809f73a2d43bb38e86a8d_cgraph.md5  napif_8inc_source.html
qceplib-nexus/nexus-4.3.1/doc/doxygen/html-f90/: NXUmodule_8f90_source.html  NXmodule_8f90.html  NXmodule_8f90_source.html  annotated.html  classnxmodule_a0e1edab84f573b2d35cc592b9bf7a8a2_cgraph.md5  classnxmodule_a10eb358dd427a212123c6ddd627e503c_cgraph.md5  classnxmodule_a2739884146a8029da65309bf2aa64772_cgraph.md5  classnxmodule_a2a13974218311ec25043e513ed4f9e6f_cgraph.map  classnxmodule_a3517e38ac6ce9a79cc50f43955b9b15e_cgraph.md5  classnxmodule_a4588c8c6715f774e0d7c862e360d808b_cgraph.md5  classnxmodule_a4bed38fa01b00e33d6aca82d2cc2240b_cgraph.map  classnxmodule_a511b6966f6b8eb0baac4b7f64ab76434_cgraph.md5  classnxmodule_a53ebefdd87926c40196d5509628d7dab_cgraph.map  classnxmodule_a59d8b718f1f596ae97b31a7a33bbdb7b_cgraph.md5  (+69 more)
qceplib-nexus/nexus-4.3.1/doc/tech_ref/: Makefile.in  base_classes.docbook  monoref.docbook  monotas.docbook  tofdgs.docbook  tofnref.docbook
qceplib-nexus/nexus-4.3.1/examples/: Makefile.am  Makefile.in  README.examples
(+5414 files in other folders)
