AC_PREREQ(2.59)
AC_INIT(qxrd, 0.3.5, jennings@anl.gov)
AC_CONFIG_SRCDIR([qxrd.cpp])
AC_CONFIG_AUX_DIR(config)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE

AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

AC_HEADER_STDBOOL
AC_C_CONST

AC_CONFIG_FILES([qxrd.spec qxrd.version.pri Doxyfile])
AC_OUTPUT
