## Process this file with automake to produce Makefile.in
#====================================================================
#  
# $Id: Makefile.am 566 2005-08-10 12:47:08Z faa59 $
#
# @configure_input@
#====================================================================
SUBDIRS = bindings applications
