## Process this file with automake to produce Makefile.in
#====================================================================
#
# $Id: Makefile.am 481 2005-06-07 16:54:53Z faa59 $
#
nxdictdocdir		= $(NXDOCDIR)/nxdict

# add files and example code here
nxdictdoc_DATA		= NXdict.tex

EXTRA_DIST		= NXdict.tex
