## Process this file with automake to produce Makefile.in
#====================================================================
#
# $Id: Makefile.am 481 2005-06-07 16:54:53Z faa59 $
#
nxexampledir		= $(NXEXAMPLEDIR)

# add files and example code here
nxexample_DATA		= README.examples

EXTRA_DIST		= README.examples
