## Process this file with automake to produce Makefile.in
#====================================================================
#
# $Id: Makefile.am 481 2005-06-07 16:54:53Z faa59 $
#
nxapidocdir		= $(NXDOCDIR)/api

# add files and example code here
nxapidoc_DATA		= napi.tex

EXTRA_DIST		= napi.tex
